# st7789_elixir

./: .gitignore  CMakeLists.txt  Makefile  README.md  mix.exs
c_src/: nif_utils.hpp  st7789.cpp
lib/: st7789_elixir.ex  st7789_nif.ex
test/: st7789_elixir_test.exs
